package ch.qscqlmpa.dwitch.ui.common

object UiTags {

    const val advertisedGames = "advertisedGames"
    const val resumableGames = "resumableGames"
    const val joinGameQrCode = "joinGameQrCode"
    const val createGame = "createGame"
    const val kickPlayer = "kickPlayer"
    const val deleteExistingGame = "deleteExistingGame"
    const val localPlayerReadyControl = "localPlayerReadyControl"
    const val localPlayerReadyText = "localPlayerReadyText"
    const val playerName = "playerName"
    const val gameName = "gameName"
    const val launchGameControl = "launchGameControl"
    const val lastCardPlayed = "lastCardPlayed"
    const val passTurnControl = "passTurnControl"
    const val playCardControl = "playCardControl"
    const val hand = "hand"
    const val startNewRound = "startNewRound"
    const val confirmCardExchange = "confirmCardExchange"
    const val cardExchangeOngoing = "cardExchangeOngoing"
    const val confirmBtn = "confirmBtn"
    const val cancelBtn = "cancelBtn"
    const val reconnect = "reconnect"
    const val toolbarNavigationIcon = "toolbarNavigationIcon"
    const val addComputerPlayer = "addComputerPlayer"
    const val gameRoomPlayersInfo = "gameRoomPlayersInfo"
    const val gameRulesInfo = "gameRulesInfo"
    const val waitingDialogAbortBtn = "waitingDialogAbortBtn"
    const val dialogNoBtn = "dialogNoBtn"
    const val dialogYesBtn = "dialogYesBtn"
    const val toggleDarkTheme = "toggleDarkTheme"
}
