<resources>
    <string name="app_name" translatable="false">Dwitch</string>
    <string name="asshole_long">Asshole</string>
    <string name="card_name_ace">Ace</string>
    <string name="card_name_blank" translatable="false">Blank</string>
    <string name="card_name_eight" translatable="false">8</string>
    <string name="card_name_five" translatable="false">5</string>
    <string name="card_name_four" translatable="false">4</string>
    <string name="card_name_jack">Jack</string>
    <string name="card_name_king">King</string>
    <string name="card_name_nine" translatable="false">9</string>
    <string name="card_name_queen">Queen</string>
    <string name="card_name_seven" translatable="false">7</string>
    <string name="card_name_six" translatable="false">6</string>
    <string name="card_name_ten" translatable="false">10</string>
    <string name="card_name_three" translatable="false">3</string>
    <string name="card_name_two" translatable="false">2</string>
    <string name="card_suit_blank" translatable="false">Blank</string>
    <string name="card_suit_clubs">Clubs</string>
    <string name="card_suit_diamonds">Diamonds</string>
    <string name="card_suit_heart">Heart</string>
    <string name="card_suit_spades">Spades</string>
    <string name="cards_in_hand">Cards in hand</string>
    <string name="confirm_cards_to_exchange">Exchange</string>
    <string name="choose_one_card_to_exchange">Choose one card to exchange</string>
    <string name="choose_two_cards_to_exchange">Choose two cards to exchange</string>
    <string name="connected_to_host">Connected to the brost, yay !</string>
    <string name="disconnected_from_host">Disconnected from the brost, damn !</string>
    <string name="game_canceled_by_host">Game canceled by brost</string>
    <string name="game_over">Game over, see ya bro !</string>
    <string name="gameroom_notification_message">In-game</string>
    <string name="end_game">Terminate game</string>
    <string name="guest_connection_error">Can\'t connect to brost, sorry mate !</string>
    <string name="guest_connecting">Connecting…</string>
    <string name="host_connection_error">Network problem: no bro can join !</string>
    <string name="host_connecting">Connecting…</string>
    <string name="leave_game">See ya mate !</string>
    <string name="listening_for_guests">Online</string>
    <string name="listening_advertised_games_failed">Having troubles while looking for games, yo !</string>
    <string name="create_new_game">Create game</string>
    <string name="resumable_games">Resumable games</string>
    <string name="loading_resumable_games_failed">Having troubles while fetching existing games, yo !</string>
    <string name="advertised_games">Games</string>
    <string name="no_game_discovered">No game discovered</string>
    <string name="resume_game">Resume game</string>
    <string name="neutral_long">Neutral</string>
    <string name="back_to_home_screen">Back to the tavern</string>
    <string name="nga_game_name_tv">Game name</string>
    <string name="join_game">Let\'s go !</string>
    <string name="host_game">Let\'s go !</string>
    <string name="player_name">Player name</string>
    <string name="not_listening_for_guests">Bros can\'t join !</string>
    <string name="not_ready">Not ready</string>
    <string name="notification_title">Dwitch</string>
    <string name="ok">Got it, mate</string>
    <string name="last_card_played">Last card played</string>
    <string name="pass_turn">Pass</string>
    <string name="play_card">Play</string>
    <string name="start_new_round">New Round</string>
    <string name="player_connected">Connected, yay !</string>
    <string name="player_disconnected">Disconnected, damn !</string>
    <string name="players">Mates</string>
    <string name="president_long">President</string>
    <string name="ready">Ready</string>
    <string name="reconnect">Reconnect</string>
    <string name="round_is_beginning">Round has begun !</string>
    <string name="round_is_beginning_with_card_exchange">Card exchange !</string>
    <string name="round_is_over">Round is over !</string>
    <string name="stop_game_service">Stop service</string>
    <string name="table_cards">Table cards</string>
    <string name="vice_asshole_long">Vice-Asshole</string>
    <string name="vice_president_long">Vice-President</string>
    <string name="waitingroom_notification_message">Waiting for other mates</string>
    <string name="players_in_waitingroom">Bros</string>
    <string name="cancel_game">Cancel game</string>
    <string name="launch_game">Go go !</string>
    <string name="loading_resumable_games">Loading resumable games</string>
    <string name="no_resumable_games">No game to resume</string>
    <string name="dialog_info_title">Info</string>
    <string name="end_of_round_screen_title">Round is over !</string>
    <string name="player_status_done">Done</string>
    <string name="player_status_playing">Playing</string>
    <string name="player_status_turnPassed">Passed</string>
    <string name="player_status_waiting">Waiting</string>
    <string name="guest_leaves_game_confirmation">Are you sure you want to leave the game ?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="host_ends_game_confirmation">Are you sure you want to end the game ?</string>
    <string name="host_cancel_game_confirmation">Are you sure you want to cancel the game  ?</string>
    <string name="add_computer_player">Add computer player</string>
    <string name="back">Back</string>
    <string name="loading">Loading…</string>
    <string name="clubs_2_content_description">Two of Clubs</string>
    <string name="clubs_3_content_description">Three of Clubs</string>
    <string name="clubs_4_content_description">Four of Clubs</string>
    <string name="clubs_5_content_description">Five of Clubs</string>
    <string name="clubs_6_content_description">Six of Clubs</string>
    <string name="clubs_7_content_description">Seven of Clubs</string>
    <string name="clubs_8_content_description">Eight of Clubs</string>
    <string name="clubs_9_content_description">Nine of Clubs</string>
    <string name="clubs_10_content_description">Ten of Clubs</string>
    <string name="clubs_jack_content_description">Jack of Clubs</string>
    <string name="clubs_queen_content_description">Queen of Clubs</string>
    <string name="clubs_king_content_description">King of Clubs</string>
    <string name="clubs_ace_content_description">Ace of Clubs</string>
    <string name="spades_2_content_description">Two of Spades</string>
    <string name="spades_3_content_description">Three of Spades</string>
    <string name="spades_4_content_description">Four of Spades</string>
    <string name="spades_5_content_description">Five of Spades</string>
    <string name="spades_6_content_description">Six of Spades</string>
    <string name="spades_7_content_description">Seven of Spades</string>
    <string name="spades_8_content_description">Eight of Spades</string>
    <string name="spades_9_content_description">Nine of Spades</string>
    <string name="spades_10_content_description">Ten of Spades</string>
    <string name="spades_jack_content_description">Jack of Spades</string>
    <string name="spades_queen_content_description">Queen of Spades</string>
    <string name="spades_king_content_description">King of Spades</string>
    <string name="spades_ace_content_description">Ace of Spades</string>
    <string name="hearts_2_content_description">Two of Hearts</string>
    <string name="hearts_3_content_description">Three of Hearts</string>
    <string name="hearts_4_content_description">Four of Hearts</string>
    <string name="hearts_5_content_description">Five of Hearts</string>
    <string name="hearts_6_content_description">Six of Hearts</string>
    <string name="hearts_7_content_description">Seven of Hearts</string>
    <string name="hearts_8_content_description">Eight of Hearts</string>
    <string name="hearts_9_content_description">Nine of Hearts</string>
    <string name="hearts_10_content_description">Ten of Hearts</string>
    <string name="hearts_jack_content_description">Jack of Hearts</string>
    <string name="hearts_queen_content_description">Queen of Hearts</string>
    <string name="hearts_king_content_description">King of Hearts</string>
    <string name="hearts_ace_content_description">Ace of Hearts</string>
    <string name="diamonds_2_content_description">Two of Diamonds</string>
    <string name="diamonds_3_content_description">Three of Diamonds</string>
    <string name="diamonds_4_content_description">Four of Diamonds</string>
    <string name="diamonds_5_content_description">Five of Diamonds</string>
    <string name="diamonds_6_content_description">Six of Diamonds</string>
    <string name="diamonds_7_content_description">Seven of Diamonds</string>
    <string name="diamonds_8_content_description">Eight of Diamonds</string>
    <string name="diamonds_9_content_description">Nine of Diamonds</string>
    <string name="diamonds_10_content_description">Ten of Diamonds</string>
    <string name="diamonds_jack_content_description">Jack of Diamonds</string>
    <string name="diamonds_queen_content_description">Queen of Diamonds</string>
    <string name="diamonds_king_content_description">King of Diamonds</string>
    <string name="diamonds_ace_content_description">Ace of Diamonds</string>
    <string name="blank_content_description">Blank</string>
    <string name="two_content_description">Two</string>
    <string name="three_content_description">Three</string>
    <string name="four_content_description">Four</string>
    <string name="five_content_description">Five</string>
    <string name="six_content_description">Six</string>
    <string name="seven_content_description">Seven</string>
    <string name="eight_content_description">Eight</string>
    <string name="nine_content_description">Nine</string>
    <string name="ten_content_description">Ten</string>
    <string name="jack_content_description">Jack</string>
    <string name="queen_content_description">Queen</string>
    <string name="king_content_description">King</string>
    <string name="ace_content_description">Ace</string>
    <string name="back_content_description">No card</string>
    <string name="join_specific_game_cd">Join game %1$s</string>
    <string name="notify_host_you_are_ready_cd">You are not ready. Click to notify the host if you are ready</string>
    <string name="notify_host_you_are_not_ready_cd">You are ready. Click to notify the host if you are not ready</string>
    <string name="current_screen_name_cd">Current screen is %1$s</string>
    <string name="last_card_played_cd">Last %1$d cards played are %2$s</string>
    <string name="kick_player">Kick %1$s</string>
    <string name="you_have_been_kick">You have been kicked by the host</string>
    <string name="table_is_empty_cd">Table is empty</string>
    <string name="game_rules_info_cd">Game rules</string>
    <string name="game_rules_info_title">Games rules</string>
    <string name="game_rules_info_content">
        The card(s) played must have a value equal or higher than the card(s) on the table (if any).\n
        Cards sorted by value (ascending order): 3, 4, 5, 6, 7, 8, 9, 10, Jack, Queen, King, Ace, 2 (Joker)\n
        If a player plays a card that has the same value as the one the table, the next player is dwitched and skips its turn.\n
        \n
        Special rules:\n
        - Playing (instead of passing) on the first Jack of the round\n
        - Playing a joker as last card\n
        Breaking a special makes you automatically the Asshole. If another player breaks a special rule later in the same round, the it becomes the Asshole and the previous player becomes the Vice-Asshole and so on.
    </string>
    <string name="title_activity_home">Home</string>
    <string name="waiting_for_disconnected_player">Waiting for player to reconnect</string>
    <string name="dialog_error_title">Error</string>
    <string name="error_joining_game_text">Error joining game</string>
    <string name="game_ad_qr_code_hint">Game advertisement QR code</string>
    <string name="title_activity_qr_code_scanner">QrCodeScannerActivity</string>
    <string name="join_game_with_qr_code">Join game with QR code</string>
    <string name="error_scanning_qr_code">Error scanning QR code</string>
    <string name="scan_qr_code_hint">Scan QR code displayed on the Host\'s screen to join the game</string>
    <string name="camera_permission_denied">Cannot scan QR code because camera permission is denied: do you want to grant the permision ?</string>
    <string name="qr_code_camera_permission_hint">Camera permission is required to scan QR code of a game</string>
    <string name="qr_code_invalid">QR code contains no game info, mate, try again ?</string>
    <string name="error_starting_camera">Error while booting up the camera</string>
    <string name="qr_code_decoding_failed">QR code decoding failed, bro, try again ?</string>
    <string name="not_connected_to_a_wlan">You\'re not on a WLAN, dude!</string>
    <string name="launching_game">Launching game …</string>
    <string name="leaving_game">Leaving game…</string>
    <string name="canceling_game">Canceling game…</string>
    <string name="ending_game">Ending game…</string>
    <string name="toggle_dark_theme_cs">Toggle dark theme</string>
    <string name="close">Close</string>
    <string name="game_ad_qr_code_cd">Game advertisement QR code</string>
</resources>
